nginx-busybox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-busybox-deployment
  name: nginx-busybox-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nnginx-busybox-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-busybox-deployment
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: nginx-1
        ports:  
        - containerPort: 80
      - image: busybox:latest
        imagePullPolicy: Always
        name: busybox
        command:
        - sh
        - -c
        - echo Hello from BusyBox! && sleep 3600
