ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neg-demo-ing
spec:
  defaultBackend:
    service:
      name: deployment-service # Name of the Service targeted by the Ingress
      port:
        number: 80 # Should match the port used by the Service
